[FIX] <pro>Table: Fix the problem of misalignment of composite columns.

--- a/components-pro/table/style/index.less
+++ b/components-pro/table/style/index.less
@@ -54,6 +54,12 @@
         outline: none;
       }
 
+      &::before {
+        display: inline-block;
+        width: 0;
+        content: ' ';
+      }
+
       > * {
         vertical-align: middle;
       }
