--- a/components-pro/text-field/style/mixin.less
+++ b/components-pro/text-field/style/mixin.less
@@ -77,7 +77,8 @@
   border: @border-width-base @border-style-base @input-border-color;
   border-radius: @border-radius-base;
   cursor: text;
-  transition: all 0.3s;
+  transition-duration: 0.3s;
+  transition-property: opacity, color, background-color, border;
 
   .placeholder;
 
